--- a/ASUS Vivobook 15X OLED/style.css
+++ b/ASUS Vivobook 15X OLED/style.css
@@ -10,28 +10,32 @@ body {
 }
 
 header {
+    position: fixed;
     overflow: hidden;
     display: flex;
-    width: 90%;
-    height: 10vh;
+    width: 100%;
+    height: 8vh;
     margin: 0 auto;
     align-items: center;
+    background-color: rgb(31, 42, 51);
+    padding: 0 80px;
 }
 
 
 .logo-d,
 .nav-links {
     display: flex;
-
+    position: fixed;
+    width: 100%;
 }
 
 .logo-d {
-    flex: 1;
+    flex: 2;
 }
+
 
 nav {
     flex: 1;
-
 }
 
 .nav-links {
@@ -59,6 +63,7 @@ a {
     margin: 0 auto;
     min-height: 55vh;
     justify-content: space-between;
+    padding: 150px 0 0 0;
 }
 
 
@@ -227,4 +232,70 @@ a {
     color: #fff;
     border: none;
     cursor: pointer;
+}
+
+@media  screen and (max-width: 780px) {
+    .fp {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+
+    .asus-pre {
+        height: 35vh;
+        justify-self: start;
+    }
+    
+    .hdr-2 {
+        font-weight: 400;
+        font-size: 30px;
+    }
+    
+    .vd {
+        height: 25vh;
+    }
+
+    .pre-v {
+        width: 2px;
+        height: 25vh;
+        gap: 1.5rem;
+    }
+    
+    .screen {
+        width: 80px;
+        height: 80px;
+    }
+    
+    .processor {
+        width: 70px;
+        height: 70px;
+        padding-top: 10px;
+    }
+    
+    .ram,
+    .ssd {
+        height: 50px;
+        width: 50px;
+    } 
+    
+    .icon-des {
+        padding-top: 10px;
+    }
+    
+    .icon-des-screen {
+        padding-top: 2px;
+        padding-bottom: 8px;
+    }
+
+    .email-par {
+        font-weight: 400;
+        font-size: 20px;
+        width: 50%;
+        margin: 100px auto 0px auto;
+    }
+
+    .sbmt {
+        font-size: 14px;
+        font-weight: 600;
+        padding: 0 5px 0 5px;
+    }
 }
